syntax = "proto3";

package cpi;

service CPI {
  rpc Info (Request) returns (Response);
}

message Request {
  string type = 1;
  int32 stemcell_api_version = 2;
  string director_uuid = 3;
  bytes properties = 4; // json
}

message Response {
  message Error {
    string type = 1;
    string message = 2;
    bool ok_to_retry = 3;
  }

  Error error = 1;
  string request_id = 2;
  string log = 3;

  oneof result {
    InfoResult info_result = 5;
    TestResult test_result = 6;
  }
}

message InfoResult {
  int32 api_version = 1;
  repeated string stemcell_formats = 2;
}

message TestResult {
  string potato = 1;
}
